all of things about resources already done

--- a/abstraction/src/main/res/values/strings.xml
+++ b/abstraction/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">abstraction</string>
+    <string name="placeholder_search">Link Gambar…</string>
+    <string name="btn_search">Cari</string>
 </resources>
